# delegate-local

./: .content-check-allow  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  release-notes.md  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: README.md  boundary-hook.md  field-notes-plg-tech-cloudfront-waf.md  install-claude-code.md  install-codex.md  install-mlx.md  install-opencode.md  otel-schema.md
evals/: README.md  eval-set.json
experiments/: escalate-eval.sh  escalate-gate-eval.sh  fanout-eval.sh  fanout-patch-eval.sh  phase-12-track-a-runner.sh  phase-12-track-a-score-all.sh  quality-trend.py  run-baseline.sh  runner.sh  score-t3.sh  score-t4.sh  score-t5.sh  score-t6.sh  score-t7.sh  score-t8.sh  score-t9.sh
mcp/: README.md  pyproject.toml
mcp/delegate_local_mcp/: __init__.py  __main__.py  server.py
mcp/delegate_to_ollama_mcp/: __init__.py  __main__.py  server.py
mcp/tests/: test_server.py
observability/: docker-compose.yml  loki.yaml  tempo.yaml
prompts/: README.md  bulk-classify.md  bulk-file-summary.md  ci-log-triage.md  code-draft.md  commit-message.md  doc-section.md  em-dash-removal.md  file-summary.md  fix-with-test.md  github-issue-body.md  ground-check.md  jira-ticket-description.md  long-thread-distillation.md  maintainer-reply.md  miss-theme-cluster.md  plan-section-intro.md  polish-reply.md  pr-description.md  pr-review-reply.md  pr-title.md  presentation-slide-prose.md  release-announcement.md  release-note.md  roadmap-entry.md  roadmap-status.md  semantic-search.md  (+2 more)
(+398 files in other folders)
