[project]
name = "delegate-local-mcp"
version = "0.12.0"
description = "MCP server wrapping delegate-local's pick-model.sh, audit-models.sh, and prompt recipe library so non-Claude tools can query routing and recipe recommendations programmatically."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ismael Martinez" }]
keywords = ["mcp", "ollama", "claude", "routing"]
dependencies = [
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
delegate-local-mcp = "delegate_local_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["delegate_local_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
